koss-application-testing/load-tests/load_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: simple-svc
spec:
    replicas: 1
    selector:
        matchLabels:
            app: simple-svc
    template:
        metadata:
            name: simple-svc
            labels:
                app: simple-svc
        spec:
            containers:
            - name: simple-cont
              image: danibachar/tester:latest
              imagePullPolicy: Always # to conserve on pulling can change to not allways pull
              livenessProbe:
                httpGet:
                  path: /health
                  port: 8081
                initialDelaySeconds: 5
                periodSeconds: 10
              ports:
              - name: http-port
                containerPort: 8081
              resources:
                  requests:
                      cpu: 200m
                      memory: 50M
---
apiVersion: v1
kind: Service
metadata:
    name: simple-svc
spec:
    type: LoadBalancer
    selector:
        app: simple-svc
    ports:
    - port: 80
      nodePort: 30000
      targetPort: http-port
      protocol: TCP
